cabal-version:      2.4
name:               todoapp
version:            0.1.0.0
synopsis:           Simple TODO app with Htmx
author:             Martin Strömberg
maintainer:         contact@martinstromberg.se
extra-source-files: CHANGELOG.md

executable todoapp
    main-is:          Main.hs
    default-language: Haskell2010

    build-depends: base ^>=4.17.2.0
                 , wai ^>= 3.2.3
                 , wai-extra >= 3.1.13.0
                 , warp ^>= 3.3.29
                 , http-types ^>= 0.12.3
                 , text ^>= 2.1
                 , bytestring >= 0.10.4
                 , utf8-string >= 0.9

    other-modules: Html
                 , Html.Attributes
                 , Html.Types
                 , Templates
                 , TodoItem

    hs-source-dirs: app
                  , app/Html
